# git-ai-memory

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml  requirements.txt
docs/: HOW_IT_WORKS.md  LINKEDIN_POST.md
eval/: golden_cases.json  run_eval.py
examples/: gitattributes.template
examples/workflows/: gitmemory.yml
sample/: demo.py  live_demo.py
sample/history/: PR-12-optimistic-locking.md  PR-25-ssr-dead-end.md  issue-33-inventory-cache.md
simulation/: README.md  TOKEN_SETUP.txt  analyze_repo.py  github_live_demo.py  simulate.py
src/gitmemory/: __init__.py  cli.py  ingest.py  llm.py  models.py  prompts.py  recall.py  retract.py  store.py
tests/: conftest.py  test_cli.py  test_ingest_recall.py  test_merge.py  test_merge_driver.py  test_models.py  test_retract.py  test_store.py
tools/: render_demo_gif.py  render_simulation_gif.py
